dependencies update code cleanup